--- a/etc/portage/package.env
+++ b/etc/portage/package.env
@@ -1,1 +1,53 @@
-/etc/portage/package.env
+# /etc/portage/package.env
+
+# crypto libs / apps / hash algorithms and ciphers
+app-crypt/* clear-flags march O3 pipe
+dev-libs/apr-util clear-flags march O3 pipe
+dev-libs/crypto++ clear-flags march O3 pipe
+dev-libs/libgcrypt clear-flags march O3 pipe
+dev-libs/libsodium clear-flags march O3 pipe
+dev-libs/openssl clear-flags march O3 pipe
+dev-libs/nettle clear-flags march O3 pipe
+dev-libs/nss clear-flags march O3 pipe
+net-wireless/wpa_supplicant clear-flags march O3 pipe
+dev-vcs/git clear-flags march O3 pipe
+
+# 3d math
+games-engines/* clear-flags march O3 pipe
+sci-physics/bullet clear-flags march O3 pipe
+
+# mass data
+sci-libs/fftw clear-flags march O3 pipe
+
+# compression libs
+app-arch/* clear-flags march O3 pipe
+dev-libs/lzo clear-flags march O3 pipe
+sys-libs/zlib clear-flags march O3 pipe
+
+# media and video libs
+media-libs/* clear-flags march O3 pipe
+media-video/* clear-flags march O3 pipe
+media-gfx/* clear-flags march O3 pipe
+media-sound/* clear-flags march O3 pipe
+
+# bitmaps
+x11-libs/pixman clear-flags march O3 pipe ftree-parallelize-loops
+
+# reduce latency of random access when scrolling gui viewports
+sys-libs/ncurses fprefetch-loop-arrays
+x11-libs/gtk+ fprefetch-loop-arrays
+dev-qt/qtgui fprefetch-loop-arrays
+dev-qt/qtwidgets fprefetch-loop-arrays
+
+# reduce latency on random access on data structures
+dev-libs/glib fprefetch-loop-arrays
+dev-libs/boost fprefetch-loop-arrays
+sys-libs/libstdc++-v3 fprefetch-loop-arrays
+dev-qt/qtcore fprefetch-loop-arrays
+dev-libs/apr fprefetch-loop-arrays
+dev-libs/isl fprefetch-loop-arrays
+
+# reduce latency of searching databases
+dev-db/* fprefetch-loop-arrays
+dev-libs/libxml2 fprefetch-loop-arrays
+dev-libs/expat fprefetch-loop-arrays
