--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -1,1 +1,64 @@
-/etc/portage/make.conf
+# These settings were set by the catalyst build script that automatically
+# built this stage.
+# Please consult /usr/share/portage/config/make.conf.example for a more
+# detailed example.
+
+# Compile optimizations
+# https://gcc.gnu.org/onlinedocs/gcc/Optimize-Options.html
+# to check defaults: gcc -O2 -Q --help=optimizers
+# to diff defaults: gcc -O2 -Q --help=optimizers > O2.txt && gcc -O3 -Q --help=optimizers > O3.txt
+# delta -s O2.txt O3.txt
+
+CFLAGS="-march=native -O2 -pipe"
+CXXFLAGS="${CFLAGS}"
+FCFLAGS="${CFLAGS}"
+FFLAGS="${CFLAGS}"
+
+# Portage parallel make jobs
+MAKEOPTS="-j7"
+#MAKEOPTS="-j4" # Chromium and RAM intensive tasks
+
+# Intel(R) Core(TM) i7-8650U CPU flags
+CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sse sse2 sse3 sse4_1 sse4_2 ssse3"
+
+# VMware use flags
+VIDEO_CARDS="fbdev vesa vmware"
+INPUT_DEVICES="libinput keyboard mouse vmmouse"
+
+# QEMU extended use flags
+QEMU_SOFTMMU_TARGETS="arm x86_64"
+QEMU_USER_TARGETS="x86_64"
+
+# default DIRs
+PORTDIR="/var/db/repos/gentoo"
+DISTDIR="/var/cache/distfiles"
+PKGDIR="/var/cache/binpkgs"
+
+# Languages
+LINGUAS="it en en_US en_GB"
+L10N="it en en-US en-GB"
+
+# This sets the language of build output to English.
+# Please keep this setting intact when reporting bugs.
+LC_MESSAGES=C
+
+# USE flags
+USE="X alsa bash-completion browser-integration caps chromium colord comic \
+     crypt cxx dbus dhclient display-manager drm egl elogind epub examples \
+     fbcon fontforge gbm geoip2 gles2 grub gstreamer gtkmm imlib initramfs \
+     io-uring jemalloc jpeg kde ladspa libcaca libkms libssh2 lzo markdown \
+     multimedia ncurses networkmanager offensive opengl plasma png \
+     pulseaudio python qalculate qemu qt5 rubberband sddm slang ssh stats \
+     symlink terminal threads usb vaapi vdpau vhost-net vim-syntax vmware \
+     vulkan vulkan-overlay wallpapers xa xattr xmalloc -bluetooth -cdr \
+     -gnome -kwallet -smart -systemd"
+
+# Enable ccache
+FEATURES="ccache"
+CCACHE_DIR="/var/cache/ccache"
+
+# Licences
+ACCEPT_LICENSE="*"
+
+# Bios mode
+GRUB_PLATFORMS="pc"
