--- a/etc/portage/package.env
+++ b/etc/portage/package.env
@@ -1,5 +1,26 @@
 # /etc/portage/package.env
 
+# clang LLVM toolchain
+sys-devel/llvm compiler-clang
+sys-libs/libcxx compiler-clang
+sys-libs/libcxxabi compiler-clang
+sys-libs/compiler-rt compiler-clang
+sys-libs/compiler-rt-sanitizers compiler-clang
+sys-libs/llvm-libunwind compiler-clang
+sys-devel/lld compiler-clang
+sys-devel/clang compiler-clang
+
+# no TMPDIR on tmpfs
+app-office/libreoffice notmpfs
+dev-lang/ghc notmpfs
+dev-lang/mono notmpfs
+dev-lang/rust notmpfs
+dev-lang/spidermonkey notmpfs
+mail-client/thunderbird notmpfs
+sys-devel/gcc notmpfs
+www-client/chromium	notmpfs
+www-client/firefox notmpfs
+
 # crypto libs / apps / hash algorithms and ciphers
 app-crypt/* clear-flags march O3 pipe
 dev-libs/apr-util clear-flags march O3 pipe
