--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -9,16 +9,36 @@
 # to diff defaults: gcc -O2 -Q --help=optimizers > O2.txt && gcc -O3 -Q --help=optimizers > O3.txt
 # delta -s O2.txt O3.txt
 
+# Force GCC w/o lto as global compiler
+CC="gcc"
+CXX="g++"
+AR="ar"
+NM="nm"
+RANLIB="ranlib"
+
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 FCFLAGS="${CFLAGS}"
 FFLAGS="${CFLAGS}"
 
-# Portage parallel make jobs
-MAKEOPTS="-j7"
-#MAKEOPTS="-j4" # Chromium and RAM intensive tasks
+# Portage parallelization improvements
+FEATURES="buildpkg binpkg-multi-instance cgroup clean-logs compressdebug fail-clean parallel-fetch \
+          parallel-install protect-owned userfetch userpriv usersandbox sfperms splitdebug sign"
+PORTAGE_IONICE_COMMAND="/usr/bin/schedtool -B -n19 \${PID}"
 
-# Intel(R) Core(TM) i7-8650U CPU flags
+## Fastest
+#EMERGE_DEFAULT_OPTS="--jobs=5 --load-average 10 --keep-going --usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
+#MAKEOPTS="-s -j5 -l8"
+
+## Fast
+EMERGE_DEFAULT_OPTS="--jobs=4 --load-average 8 --keep-going --usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
+MAKEOPTS="-s -j4 -l6"
+
+## Consevative
+#EMERGE_DEFAULT_OPTS="--usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
+#MAKEOPTS="-j4 -l6"
+
+# Intel(R) Core(TM) i7-8650U CPU flags  [cpuid2cpuflags output]
 CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sse sse2 sse3 sse4_1 sse4_2 ssse3"
 
 # VMware use flags
@@ -26,7 +46,7 @@ VIDEO_CARDS="fbdev vesa vmware"
 INPUT_DEVICES="libinput keyboard mouse vmmouse"
 
 # QEMU extended use flags
-QEMU_SOFTMMU_TARGETS="arm x86_64"
+QEMU_SOFTMMU_TARGETS="x86_64"
 QEMU_USER_TARGETS="x86_64"
 
 # default DIRs
@@ -44,18 +64,14 @@ LC_MESSAGES=C
 
 # USE flags
 USE="X alsa bash-completion browser-integration caps chromium colord comic \
-     crypt cxx dbus dhclient display-manager drm egl elogind epub examples \
-     fbcon fontforge gbm geoip2 gles2 grub gstreamer gtkmm imlib initramfs \
-     io-uring jemalloc jpeg kde ladspa libcaca libkms libssh2 lzo markdown \
-     multimedia ncurses networkmanager offensive opengl plasma png \
-     pulseaudio python qalculate qemu qt5 rubberband sddm slang ssh stats \
-     symlink terminal threads usb vaapi vdpau vhost-net vim-syntax vmware \
-     vulkan vulkan-overlay wallpapers xa xattr xmalloc -bluetooth -cdr \
-     -gnome -kwallet -smart -systemd"
-
-# Enable ccache
-FEATURES="ccache"
-CCACHE_DIR="/var/cache/ccache"
+     cpudetection crypt cxx dbus dhclient display-manager drm egl elogind \
+     epub examples fbcon fontforge gbm geoip2 gles2 grub gstreamer gtkmm \
+     haptic imlib initramfs io-uring jemalloc jpeg kde ladspa libcaca libkms \
+     libssh2 lzo markdown multimedia ncurses networkmanager offensive opengl \
+     otr plasma png proprietary-codecs pulseaudio python qalculate qemu qt5 \
+     rdp rubberband sddm slang sox ssh stats symlink terminal threads usb \
+     vaapi vdpau vhost-net vim-syntax vmware vnc vulkan vulkan-overlay \
+     wallpapers xa xattr xmalloc zstd -bluetooth -cdr -gnome -smart -systemd"
 
 # Licences
 ACCEPT_LICENSE="*"
