--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -53,6 +53,7 @@ QEMU_USER_TARGETS="x86_64"
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
 PKGDIR="/var/cache/binpkgs"
+PORTAGE_TMPDIR="/var/tmp"
 
 # Languages
 LINGUAS="it en en_US en_GB"
