--- a/home/config/cava/config
+++ b/home/config/cava/config
@@ -4,7 +4,7 @@
 [general]
 
 # Smoothing mode. Can be 'normal', 'scientific' or 'waves'. DEPRECATED as of 0.6.0
-; mode = scientific
+; mode = normal
 
 # Accepts only non-negative values.
 ; framerate = 60
@@ -67,9 +67,6 @@
 ; method = shmem
 ; source = /squeezelite-AA:BB:CC:DD:EE:FF
 
-; method = portaudio
-; source = auto
-
 
 [output]
 
@@ -84,9 +81,10 @@
 
 # Visual channels. Can be 'stereo' or 'mono'.
 # 'stereo' mirrors both channels with low frequencies in center.
-# 'mono' outputs left to right lowest to highest frequencies.
+# 'mono' averages both channels and outputs left to right lowest to highest frequencies.
 # 'mono_option' set mono to either take input from 'left', 'right' or 'average'.
 ; channels = stereo
+channels = mono
 ; mono_option = average
 
 # Raw output target. A fifo will be created if target does not exist.
@@ -111,26 +109,18 @@
 [color]
 
 # Colors can be one of seven predefined: black, blue, cyan, green, magenta, red, white, yellow.
-# Or defined by hex code '#xxxxxx' (hex code must be within ''). User defined colors requires
-# ncurses output method and a terminal that can change color definitions such as Gnome-terminal or rxvt.
-# if supported, ncurses mode will be forced on if user defined colors are used.
-# default is to keep current terminal color
-; background = default
- foreground = magenta
+# Or defined by hex code '#xxxxxx' (hex code must be within ''). User defined colors requires a
+# terminal that can change color definitions such as Gnome-terminal or rxvt.
+; background = black
+; foreground = cyan
 
-# Gradient mode, only hex defined colors (and thereby ncurses mode) are supported,
-# background must also be defined in hex  or remain commented out. 1 = on, 0 = off.
-# You can define as many as 8 different colors. They range from bottom to top of screen
- gradient = 1
- gradient_count = 8
- gradient_color_1 = '#59cc33'
- gradient_color_2 = '#80cc33'
- gradient_color_3 = '#a6cc33'
- gradient_color_4 = '#cccc33'
- gradient_color_5 = '#cca633'
- gradient_color_6 = '#cc8033'
- gradient_color_7 = '#cc5933'
- gradient_color_8 = '#cc3333'
+# Gradient mode, only hex defined colors are supported, background must also be defined in hex
+# or remain commented out. 1 = on, 0 = off. Warning: for certain terminal emulators cava will
+# not able to restore color definitions on exit, simply restart your terminal to restore colors.
+gradient = 1
+gradient_count = 2
+gradient_color_1 = '#0099ff'
+gradient_color_2 = '#ff3399'
 
 
 
@@ -138,11 +128,11 @@
 
 # Percentage value for integral smoothing. Takes values from 0 - 100.
 # Higher values means smoother, but less precise. 0 to disable.
-; integral = 77
+; integral = 70
 
 # Disables or enables the so-called "Monstercat smoothing" with or without "waves". Set to 0 to disable.
-; monstercat = 0
-; waves = 0
+; monstercat = 1;
+; waves = 1;
 
 # Set gravity percentage for "drop off". Higher values means bars will drop faster.
 # Accepts only non-negative values. 50 means half gravity, 200 means double. Set to 0 to disable "drop off".
