--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -26,17 +26,21 @@ FEATURES="buildpkg binpkg-multi-instance cgroup clean-logs compressdebug fail-cl
           parallel-install protect-owned userfetch userpriv usersandbox sfperms splitdebug sign"
 PORTAGE_IONICE_COMMAND="/usr/bin/schedtool -B -n19 \${PID}"
 
-## Fastest
+## Fast
 #EMERGE_DEFAULT_OPTS="--jobs=5 --load-average 10 --keep-going --usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
 #MAKEOPTS="-s -j5 -l8"
 
-## Fast
-EMERGE_DEFAULT_OPTS="--jobs=4 --load-average 8 --keep-going --usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
-MAKEOPTS="-s -j4 -l6"
+## Stable
+EMERGE_DEFAULT_OPTS="--jobs=4 --load-average 6 --keep-going --usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
+MAKEOPTS="-s -j4 -l4"
 
 ## Consevative
 #EMERGE_DEFAULT_OPTS="--usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
-#MAKEOPTS="-j4 -l6"
+#MAKEOPTS="-j4 -l4"
+
+# Safe - (Chromium and ram intensive emerge)
+#FEATURES="buildpkg binpkg-multi-instance"
+#MAKEOPTS="-j5"
 
 # Intel(R) Core(TM) i7-8650U CPU flags  [cpuid2cpuflags output]
 CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sse sse2 sse3 sse4_1 sse4_2 ssse3"
@@ -67,12 +71,13 @@ LC_MESSAGES=C
 USE="X alsa bash-completion browser-integration caps chromium colord comic \
      cpudetection crypt cxx dbus dhclient display-manager drm egl elogind \
      epub examples fbcon fontforge gbm geoip2 gles2 grub gstreamer gtkmm \
-     haptic imlib initramfs io-uring jemalloc jpeg kde ladspa libcaca libkms \
+     haptic imlib initramfs io-uring jemalloc jpeg kde libcaca libdrm libkms \
      libssh2 lzo markdown multimedia ncurses networkmanager offensive opengl \
      otr plasma png proprietary-codecs pulseaudio python qalculate qemu qt5 \
      rdp rubberband sddm slang sox ssh stats symlink terminal threads usb \
      vaapi vdpau vhost-net vim-syntax vmware vnc vulkan vulkan-overlay \
-     wallpapers xa xattr xmalloc zstd -bluetooth -cdr -gnome -smart -systemd"
+     wallpapers xa xattr xmalloc zstd -bluetooth -cdr -gnome -modemmanager \
+     -smart -systemd -vlc"
 
 # Licences
 ACCEPT_LICENSE="*"
