--- a/home/config/terminator/config
+++ b/home/config/terminator/config
@@ -17,14 +17,14 @@
     background_darkness = 0.83
     background_type = transparent
     cursor_color = "#9141ac"
-    font = agave Nerd Font Mono 16
+    font = agave Nerd Font Mono 15
     foreground_color = "#ffffff"
     show_titlebar = False
     scrollback_lines = 5000
     scrollback_infinite = True
     disable_mousewheel_zoom = True
     palette = "#000000:#ed333b:#00cd00:#cdcd00:#1a5fb4:#cd00cd:#00cdcd:#e5e5e5:#7f7f7f:#f66151:#00ff00:#ffff00:#5c5cff:#ff00ff:#00ffff:#ffffff"
-    login_shell = True
+    custom_command = /bin/bash
     use_system_font = False
     bold_is_bright = True
     copy_on_selection = True
@@ -32,7 +32,7 @@
     icon_bell = False
     background_darkness = 1.0
     cursor_color = "#9141ac"
-    font = agave Nerd Font Mono 16
+    font = agave Nerd Font Mono 15
     foreground_color = "#ffffff"
     show_titlebar = False
     scrollback_lines = 5000
@@ -47,7 +47,7 @@
     background_darkness = 0.37
     background_type = transparent
     cursor_color = "#9141ac"
-    font = agave Nerd Font Mono 16
+    font = agave Nerd Font Mono 15
     foreground_color = "#ffffff"
     show_titlebar = False
     scrollback_lines = 5000
@@ -62,7 +62,7 @@
     background_darkness = 0.0
     background_type = transparent
     cursor_color = "#9141ac"
-    font = agave Nerd Font Mono 16
+    font = agave Nerd Font Mono 15
     foreground_color = "#ffffff"
     show_titlebar = False
     scrollback_lines = 5000
