updated make.conf and portage files

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -26,17 +26,17 @@ PORTAGE_IONICE_COMMAND="/usr/bin/schedtool -B -n19 \${PID}"
 FEATURES="buildpkg binpkg-multi-instance cgroup clean-logs compressdebug fail-clean parallel-fetch \
           parallel-install protect-owned userfetch userpriv usersandbox sfperms splitdebug sign"
 
-# Safe - (Chromium and ram intensive emerge)
+# Safe (Chromium and ram intensive tasks)
 #FEATURES="buildpkg binpkg-multi-instance"
-#MAKEOPTS="-j5"
+#MAKEOPTS="-s -j5"
 
 ## Consevative
 #EMERGE_DEFAULT_OPTS="--usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
 #MAKEOPTS="-j4 -l4"
 
 ## Stable
-EMERGE_DEFAULT_OPTS="--jobs=4 --load-average 6 --keep-going --usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
-MAKEOPTS="-s -j4 -l4"
+EMERGE_DEFAULT_OPTS="--jobs=3 --load-average 5 --keep-going --usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
+MAKEOPTS="-s -j3 -l3"
 
 ## Fast
 #EMERGE_DEFAULT_OPTS="--jobs=5 --load-average 10 --keep-going --usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
@@ -49,9 +49,9 @@ CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sse sse2 s
 VIDEO_CARDS="fbdev vesa vmware"
 INPUT_DEVICES="libinput keyboard mouse vmmouse"
 
-# QEMU extended use flags
-QEMU_SOFTMMU_TARGETS="x86_64"
-QEMU_USER_TARGETS="x86_64"
+# QEMU extended use flags (qemu removed)
+#QEMU_SOFTMMU_TARGETS="x86_64"
+#QEMU_USER_TARGETS="x86_64"
 
 # default DIRs
 PORTDIR="/var/db/repos/gentoo"
@@ -68,16 +68,12 @@ L10N="it en en-US en-GB"
 LC_MESSAGES=C
 
 # USE flags
-USE="X alsa bash-completion browser-integration caps chromium colord comic \
-     cpudetection crypt cxx dbus display-manager drm egl elogind epub \
-     examples fbcon fontforge gbm geoip2 gles2 grub gstreamer gtkmm haptic \
-     imlib initramfs io-uring jemalloc jpeg kde libcaca libdrm libkms \
-     libssh2 lzo markdown multimedia ncurses networkmanager offensive opengl \
-     otr plasma png proprietary-codecs pulseaudio python qalculate qemu qt5 \
-     rdp rubberband sddm slang sox ssh stats symlink terminal threads usb \
-     vaapi vdpau vhost-net vim-syntax vmware vnc vulkan vulkan-overlay \
-     wallpapers xa xattr xmalloc zstd -bluetooth -cdr -gnome -modemmanager \
-     -smart -systemd -vlc"
+USE="X alsa bash-completion caps dga drm egl elogind examples fbcon \
+     fontforge gbm gles2 grub gstreamer initramfs io-uring jemalloc ncurses \
+     networkmanager offensive opengl pulseaudio python rubberband threads \
+     usb vim-syntax vmware wallpapers xa xattr xmalloc zstd -bluetooth -cdr \
+     -gnome -modemmanager -smart -systemd -vaapi -vdpau -vlc -vulkan \
+     -vulkan-overlay -wayland"
 
 # Licences
 ACCEPT_LICENSE="*"
