--- a/etc/dracut.conf
+++ b/etc/dracut.conf
@@ -22,7 +22,7 @@ omit_dracutmodules+=" bash biosdevname bluetooth btrfs busybox cifs crypt \
 
 compress="lz4"
 nofscks="yes"
-early_microcode="no"
+early_microcode="yes"
 use_fstab="yes"
 
 install_items="/lib64/elogind/elogind-uaccess-command"
