--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -26,24 +26,29 @@ PORTAGE_IONICE_COMMAND="/usr/bin/schedtool -B -n19 \${PID}"
 FEATURES="buildpkg binpkg-multi-instance cgroup clean-logs compressdebug fail-clean parallel-fetch \
           parallel-install protect-owned userfetch userpriv usersandbox sfperms splitdebug sign"
 
-# Safe (Chromium and ram intensive tasks)
+# Safe / Debug mode (Chromium and ram intensive tasks)
 #FEATURES="buildpkg binpkg-multi-instance"
-#MAKEOPTS="-s -j5"
+#MAKEOPTS="-s -j8"
 
 ## Consevative
 #EMERGE_DEFAULT_OPTS="--usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
-#MAKEOPTS="-j4 -l4"
+#MAKEOPTS="-j8 -l8"
+
+## Stable temperature control
+#EMERGE_DEFAULT_OPTS="--jobs=8 --load-average 10 --keep-going --usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
+#MAKEOPTS="-s -j8 -l8"
 
 ## Stable
-EMERGE_DEFAULT_OPTS="--jobs=3 --load-average 5 --keep-going --usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
-MAKEOPTS="-s -j3 -l3"
+#EMERGE_DEFAULT_OPTS="--jobs=10 --load-average 12 --keep-going --usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
+#MAKEOPTS="-s -j10 -l10"
 
 ## Fast
-#EMERGE_DEFAULT_OPTS="--jobs=5 --load-average 10 --keep-going --usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
-#MAKEOPTS="-s -j5 -l8"
+EMERGE_DEFAULT_OPTS="--jobs=12 --load-average 14 --keep-going --usepkg --binpkg-respect-use=y --binpkg-changed-deps=y"
+MAKEOPTS="-s -j12 -l12"
 
-# Intel(R) Core(TM) i7-8650U CPU flags [cpuid2cpuflags output]
-CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sse sse2 sse3 sse4_1 sse4_2 ssse3"
+# 12th Gen Intel(R) Core(TM) i7-12700H CPU flags [cpuid2cpuflags output]
+CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sha sse sse2 sse3 sse4_1 sse4_2 ssse3"
+
 
 # VMware use flags
 VIDEO_CARDS="fbdev vesa vmware"
@@ -57,7 +62,7 @@ INPUT_DEVICES="libinput keyboard mouse vmmouse"
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="/var/cache/distfiles"
 PKGDIR="/var/cache/binpkgs"
-PORTAGE_TMPDIR="/var/tmp"
+PORTAGE_TMPDIR="/var/tmp/portage"
 
 # Languages
 LINGUAS="it en en_US en_GB"
@@ -71,9 +76,9 @@ LC_MESSAGES=C
 USE="X alsa bash-completion caps dga drm egl elogind examples fbcon \
      fontforge gbm gles2 grub gstreamer initramfs io-uring jemalloc ncurses \
      networkmanager offensive opengl pulseaudio python rubberband threads \
-     usb vim-syntax vmware wallpapers xa xattr xmalloc zstd -bluetooth -cdr \
-     -gnome -modemmanager -smart -systemd -vaapi -vdpau -vlc -vulkan \
-     -vulkan-overlay -wayland"
+     usb vim-syntax vmware wallpapers xa xattr xinerama xmalloc zstd \
+     -bluetooth -cdr -gnome -modemmanager -smart -systemd -vaapi -vdpau -vlc \
+     -vulkan -vulkan-overlay -wayland"
 
 # Licences
 ACCEPT_LICENSE="*"
